test/fails/bad_functions/return_type7.lgl
tag a is vec2;

a f(vec2 x) {
    return x; // No downcasting in return
}

void main() {
    return;
}